Method to raise confirmation modal via redux

--- a/src/styles/BatteryStatus.scss
+++ b/src/styles/BatteryStatus.scss
@@ -1,11 +1,12 @@
 .battery-status {
     text-align: right;
-    width: 10%;
+    width: 15%;
     padding: 5px;
 }
 
 .status-bar {
-    background-color: #34352D;
+    // background-color: #34352D;
+    background-color: #000000;
     /* color: #B9C38E; */
     display: inline-block;
     margin: 1px;
