--- a/src/index.scss
+++ b/src/index.scss
@@ -1,10 +1,20 @@
+@font-face {
+  font-family: Nokia;
+  src: url('nokiafc22.ttf');
+}
+
+* {
+  font-family: Nokia;
+}
+
 html, body, #root {
   margin: 0;
   padding: 0;
   height: 100%;
   font-family: sans-serif;
-  background-color: #f21f1f;
-  color: #34352D;
+  background-color: #c00000;
+  // color: #34352D;
+  color: #000000;
 }
 
 *:focus {
@@ -24,15 +34,29 @@ input[type=text] {
   border-top: none;
   border-right: none;
   border-left: none;
-  border-bottom-color: #34352D;
+  // border-bottom-color: #34352D;
+  border-bottom-color: #000000;
   border-bottom-style: dashed;
 }
 
 button {
   background-color: inherit;
-  border-color: #34352D;
+  // border-color: #34352D;
+  border-color: #000000;
   border-bottom-style: dotted;
   border-left-style: dotted;
   border-top-style: none;
   border-right-style: none;
+}
+
+textarea {
+  width: 100%;
+  height: 80%;
+  resize: none;
+  background-color: inherit;
+  border-bottom-style: dotted;
+  border-left-style: dotted;
+  border-top-style: none;
+  border-right-style: none;
+  border-color: #000000;
 }
