--- a/src/styles/BatteryStatus.scss
+++ b/src/styles/BatteryStatus.scss
@@ -6,7 +6,7 @@
 
 .status-bar {
     // background-color: #34352D;
-    background-color: #000000;
+    background-color: #000000d6;
     /* color: #B9C38E; */
     display: inline-block;
     margin: 1px;
