Implemented navigation bar

--- a/src/index.scss
+++ b/src/index.scss
@@ -29,6 +29,16 @@ html, body, #root {
   background-color: #e24646;
 }
 
+.noselect {
+  -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome and Opera */
+}
+
 input[type=text] {
   background: inherit;
   border-top: none;
