--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -1,7 +1,8 @@
 .home {
     height: 100%;
     display: flex;
-    justify-content: center;
+    flex-flow: column;
+    justify-content: space-evenly;
     align-items: center;
 }
 
