--- a/src/App.css
+++ b/src/App.css
@@ -7,4 +7,13 @@
 
 .container {
   width: 70%;
+  display: flex;
+  flex-flow: column;
+}
+
+.page-container {
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    flex-flow: column;
 }
